[package]
name = "velas-address-rust"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.1.0"
bitcoin_hashes = "0.7.5"
regex = "1.3.6"