[package]
name = "velas-address-rust"
version = "0.2.2"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Rust lib for en/decoding address to velas/ether format"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/velas-address-rust"
repository = "https://github.com/deadblackclover/velas-address-rust"
keywords = ["velas", "blockchain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basex-rs = "0.1.1"
bitcoin_hashes = "0.7.5"
hex = "0.4.2"
regex = "1.3.6"